--- a/Zhemanov_Alexandr_dz_2/4.html
+++ b/Zhemanov_Alexandr_dz_2/4.html
@@ -31,7 +31,58 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  /**
+   * Sum of two numers.
+   * @param {number} a Первое слагаемое.
+   * @param {number} b Второе слагаемое.
+   * @return {number} Результат a + b.
+   */
+  function add(a, b) {
+    return a + b;
+    }
+  
+  /**
+   * Abs sub of two numers.
+   * @param {number} a Первое число.
+   * @param {number} b Второе число.
+   * @return {number} Результат модуль a - b.
+   */
+  function sub(a, b) {
+    return Math.abs(a - b);
+    }
+
+
+
+  /**
+   * Product of two numers.
+   * @param {number} a Первый множитель.
+   * @param {number} b Второй множитель.
+   * @return {number} Результат a * b.
+   */
+  function mul(a, b) {
+    return a * b;
+    }
+
+
+  /**
+   * Division of two numers.
+   * @param {number} a Делимое.
+   * @param {number} b Делитель.
+   * @return {number} Результат a / b.
+   */
+  function div(a, b){
+    return a / b;
+    }
+
+  console.log(add(1, 2));
+  console.log(add(2, 2));
+  console.log(sub(1, 3));
+  console.log(sub(10, 3));
+  console.log(mul(4, -5));
+  console.log(div(10, 5));
+  console.log(div(1024, 2));
+
+
 </script>
 </body>
 </html>
