--- a/Zhemanov_Alexandr_dz_2/1.html
+++ b/Zhemanov_Alexandr_dz_2/1.html
@@ -20,25 +20,29 @@
   let a = 1, b = 1, c, d;
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  Инкрементирование "а" просиходит до присвоение "с" т.е.  с = ++а -> c:: = (++1) -> c = 2; a = 2 
    */
   c = ++a;
   console.log(c);
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
+  Инкрементирование "b" просиходит после присвоение "d" т.е d = b++ -> d = 1; b = 2; 
    */
   d = b++;
   console.log(d);
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  a = 2; c = 2 + (++a) -> c = 2 + (++2) -> c = 2 + 3; c = 5; a = 3
+                                  ^^^^^
+                                    a
    */
   c = 2 + ++a;
   console.log(c);
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
+ b = 2; d = 2 + (b++) -> d = 2 + (2++) -> d = 2 + 2 -> d = 4; b = 3 
+                                 ^^^^^
+                                   b
    */
   d = 2 + b++;
   console.log(d);
