--- a/Zhemanov_Alexandr_dz_2/3.html
+++ b/Zhemanov_Alexandr_dz_2/3.html
@@ -21,8 +21,8 @@
 <script>
   "use strict";
 
-  let a = parseInt(prompt("a = "));
-  let b = parseInt(prompt("b = "));
+  const a = +prompt("a = ");
+  const b = +prompt("b = ");
 
 
   if (Math.sign(a) == Math.sign(b)){
@@ -42,7 +42,6 @@
         console.log(a + b);
 
       }
-
 
 </script>
 </body>
