--- a/Zhemanov_Alexandr_dz_1/2.html
+++ b/Zhemanov_Alexandr_dz_1/2.html
@@ -16,8 +16,8 @@
 <script>
   "use strict";
 
-  let name = "Alex"
-  let admin = name
+  const name = "Alex"
+  const admin = name
 
   alert(admin)
 
