--- a/Zhemanov_Alexandr_dz_1/4.html
+++ b/Zhemanov_Alexandr_dz_1/4.html
@@ -28,14 +28,14 @@
 <script>
   "use strict";
 
-  let number_input = prompt("введите число");
-  let number_len = number_input.length;
+  const numberInput = prompt("введите число");
+  const numberLen = numberInput.length;
 
-  let hundreds =  (! number_input[number_len - 3]) ? 0 : number_input[number_len - 3] ;
-  let tens = (! number_input[number_len - 2]) ? 0 : number_input[number_len - 2] ;
-  let ones = (! number_input[number_len - 1]) ? 0 : number_input[number_len - 1] ;
+  const hundreds = !numberInput[numberLen - 3] ?? 0;
+  const tens = !numberInput[numberLen - 2] ?? 0;
+  const ones = !numberInput[numberLen - 1] ?? 0;
 
-  alert("В числе " + number_input + " количество сотен: " + hundreds + ", десятков: " + tens + ", единиц: " + ones);
+    alert(`В числе ${numberInput} количество сотен:  ${hundreds}, десятков: ${tens}, единиц: ${ones}`);
 
 </script>
 </body>
