--- a/Zhemanov_Alexandr_dz_5/3.html
+++ b/Zhemanov_Alexandr_dz_5/3.html
@@ -56,12 +56,17 @@
   1. Необходимо вывести сообщение в консоль "все теги прогрузились", когда все
   теги будут созданы браузером.
   */
-
+  document.addEventListener("DOMContentLoaded", () => {
+      console.log("все теги прогрузились");
+  });
 
   /*
   2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
   ресурсы страницы будут загружены.
   */
+  window.addEventListener("load", () => {
+    console.log("страница загрузилась");
+  });
 
 
   /*
@@ -73,13 +78,24 @@
   которому был совершен клик.
   Необходимо использовать делегирование.
   */
+  document.addEventListener("click", (ev) => {
+    const targetElm = ev.target;
+    console.log(
+        "Класс \"super_element\" " +
+        `${targetElm.classList.contains("super_element") ? "присутствует" : "отсутствует"}` +
+        `в элементе \"${targetElm.nodeName.toLocaleLowerCase()}\" `
+      );
+  });
 
 
   /*
   4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
   "Вы навели на textarea."
    */
-
+    document.querySelector("textarea")
+      .addEventListener("mouseenter", (event) => {
+          console.log("Вы навели на textarea");
+      })
 
   /*
   5. Необходимо повесить событие клика на тег ul. В обработчике события в
@@ -88,18 +104,30 @@
   Если клик был не по кнопке, то ничего выводить не нужно.
   Необходимо использовать делегирование.
    */
-
+  document.querySelector("ul").addEventListener("click", (event) => {
+    if(event.target.nodeName === "BUTTON") {
+      console.log(event.target.textContent);
+    }
+  }); 
 
   /*
   6. Вопрос: Почему в console.log пишется сначала текст из 5 задания и только
   потом выводится текст из 3 задания, если мы кликаем по кнопкам в ul?
   Ответ необходимо написать здесь же, под этим комментарием, своими словами.
   */
+  /* Данное происходит из-за делегирование событий.
+     Событие обрабатывется от узла-сына к узлу-отцу. ul ->> tag ->> document
+    */
 
 
   /*
   7. С помощью JS необходимо изменить цвет заднего фона каждого второго тега li.
    */
+    const liList = document.querySelectorAll("li").forEach((elem, index) => {
+      if((index + 1) % 2 === 0) {
+        elem.style.backgroundColor = "red";
+      }
+    });
 
 </script>
 </body>
