--- a/Zhemanov_Alexandr_dz_7/3.html
+++ b/Zhemanov_Alexandr_dz_7/3.html
@@ -25,6 +25,7 @@
    * параметр "n"
    */
   function descendingOrder(n) {
+    return +Array.from(n.toString()).sort().reverse().join("");
 
   }
 
