--- a/Zhemanov_Alexandr_dz_7/2.html
+++ b/Zhemanov_Alexandr_dz_7/2.html
@@ -49,11 +49,11 @@
      */
     getProductMarkup() {
       return `
-        <div class="product">
-            <div>${name}</div>
-            <img src="${imageUrl}" alt="">
-            <div>Цена: <span>${price}</span> р.</div>
-            <a href="https://example.com/producs/${id}">Подробнее</a>
+        <div class="thisuct">
+            <div>${this.name}</div>
+            <img src="${this.imageUrl}" alt="">
+            <div>Цена: <span>${this.price}</span> р.</div>
+            <a href="https://example.com/thisucs/${this.id}">Подробнее</a>
         </div>
       `;
     }
@@ -77,13 +77,13 @@
     ],
   };
 
-  const productsEl = document.querySelector('products');
-  document.querySelector('header').addEventListener('click', event => {
-    if (!event.currentTarget.classList.contains('.menuButton')) {
+  const productsEl = document.querySelector(".products");
+  document.querySelector("header").addEventListener("click", event => {
+    if (!event.target.classList.contains("menuButton")) {
       return;
     }
-    productsEl.innerHTML = products[event.currentTarget.dataset.type]
-      .map(product => product.getProductMarkup());
+    productsEl.innerHTML = products[event.target.dataset.type]
+        .map(elem => {return elem.getProductMarkup();});
   });
 
 </script>
