--- a/Zhemanov_Alexandr_dz_8/index.html
+++ b/Zhemanov_Alexandr_dz_8/index.html
@@ -23,8 +23,24 @@
 
                 <span class="cartIconWrap">
                     <img class="cartIcon" src="images/cart.png" alt="">
-                    <span>5</span>
+                    <span class="hidden"></span>
                 </span>
+                <div class="basket hidden">
+                  <div class="basketHeader">
+                    <span>Name</span>
+                    <span>Count</span>
+                    <span>Price for one</span>
+                    <span>Result</span>
+                  </div>
+                  <hr/>
+                  <div class="basketElems">
+                  </div>
+                  <hr/>
+                  <div class="basketFooter">
+                    <span>Result:</span>
+                    <span>$0.00</span>
+                  </div>
+                </div>
             </div>
         </div>
     </div>
@@ -151,15 +167,13 @@
 
                 <div class="featuredData">
                     <div class="featuredName">
-                        ELLERY X M'O CAPSULE
+                        Product #1
                     </div>
                     <div class="featuredText">
-                        Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut repellat est veniam totam ullam exercitationem quia adipisci quae dicta quos.
                     </div>
                     <div class="featuredPrice">
-                        $52.00
+                        $75.00
                     </div>
                 </div>
 
@@ -179,15 +193,13 @@
 
                 <div class="featuredData">
                     <div class="featuredName">
-                        ELLERY X M'O CAPSULE
+                        Product #2
                     </div>
                     <div class="featuredText">
-                        Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium architecto, rem ab enim exercitationem harum aliquid inventore. Minus vero nihil labore distinctio dolorem molestias laborum quisquam! Voluptas porro quae ad?
                     </div>
                     <div class="featuredPrice">
-                        $52.00
+                        $102.00
                     </div>
                 </div>
 
@@ -207,15 +219,13 @@
 
                 <div class="featuredData">
                     <div class="featuredName">
-                        ELLERY X M'O CAPSULE
+                        Product #3
                     </div>
                     <div class="featuredText">
-                        Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, nesciunt sequi quo magni expedita illum explicabo. Dolores totam laboriosam nesciunt.
                     </div>
                     <div class="featuredPrice">
-                        $52.00
+                        $68.00
                     </div>
                 </div>
 
@@ -235,15 +245,13 @@
 
                 <div class="featuredData">
                     <div class="featuredName">
-                        ELLERY X M'O CAPSULE
+                        Product #4
                     </div>
                     <div class="featuredText">
-                        Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo est voluptatibus magni ad.
                     </div>
                     <div class="featuredPrice">
-                        $52.00
+                        $72.00
                     </div>
                 </div>
 
@@ -263,15 +271,13 @@
 
                 <div class="featuredData">
                     <div class="featuredName">
-                        ELLERY X M'O CAPSULE
+                        Product #5
                     </div>
                     <div class="featuredText">
-                        Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum repudiandae animi saepe ipsa sit omnis incidunt itaque tempore inventore? Iste molestias recusandae ab architecto dolorum.
                     </div>
                     <div class="featuredPrice">
-                        $52.00
+                        $120.00
                     </div>
                 </div>
 
@@ -290,15 +296,13 @@
 
                 <div class="featuredData">
                     <div class="featuredName">
-                        ELLERY X M'O CAPSULE
+                        Product #6
                     </div>
                     <div class="featuredText">
-                        Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nulla totam praesentium culpa voluptates. Illo, praesentium esse.
                     </div>
                     <div class="featuredPrice">
-                        $52.00
+                        $97.00
                     </div>
                 </div>
 
